crypto alignement fixed

--- a/src/styles/Cryptos.css
+++ b/src/styles/Cryptos.css
@@ -37,14 +37,16 @@
 
 .crypto__container {
   display: flex;
+  flex-direction: row;
   width: 100%;
   height: 80px;
 }
 
 .crypto__smallerContainer {
   display: flex;
+  flex-direction: row;
   width: 100%;
-  height: 64px;
+  height: 60px;
 }
 
 .crypto__datasnDashes {
@@ -55,7 +57,15 @@
 }
 
 .crypto__arrow {
+  /*width: 20%;*/
+  display: flex;
+  justify-content: flex-end;
   width: 20%;
+  color: #b0b9c8;
+  font-size: 32px;
+  line-height: 32px;
+  align-items: center;
+  background-color: #52a7d6;
 }
 
 .crypto__datas {
