--- a/src/styles/Transfer.css
+++ b/src/styles/Transfer.css
@@ -110,7 +110,7 @@
 .transfer__avatarsnButton__container {
   display: flex;
   column-gap: 21.5px;
-  margin-top: 32px;
+  margin-top: 40px;
   margin-bottom: 12px;
 }
 
